src/objects/Product_Service__c.object
<CustomObject>
    <description>this information is recorded for the buyer ticket or the seller ticketthis information is updatable by the individual buyer seller(userids) for the buyer/seller package</description>
    <fields>
        <fullName>BuyerSeller_Flag__c</fullName>
        <description>B - Buyer
S - Seller</description>
        <label>Buyer Seller Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <description>buyer or seller id</description>
        <label>Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>BLN Product Services</relationshipLabel>
        <relationshipName>Product_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Product Service</label>
    <nameField>
        <label>Product Services Text</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Product Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>